bundle/tests/scorecard/minikube-kuttl/ingress/01-delete-ingress.yaml
apiVersion: rc.app.stacks/v1beta2
kind: RuntimeComponent
metadata:
  name: ingress
spec:
  # Add fields here
  applicationImage: 'k8s.gcr.io/pause:2.0'
  replicas: 1
  expose: false
