bundle/tests/scorecard/minikube-kuttl/ingress/02-delete-ingress.yaml
apiVersion: rc.app.stacks/v1beta2
kind: RuntimeComponent
metadata:
  name: ingress
spec:
  # Add fields here
  expose: false
