bundle/tests/scorecard/minikube-kuttl/ingress/00-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress
status:
  readyReplicas: 1
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: myapp.mycompany.com
      http:
        paths:
          - path: /
            pathType: Prefix
