bundle/tests/scorecard/minikube-kuttl/ingress/01-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress
status:
  readyReplicas: 1
